browser sync test

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     hello 123
     <footer>
-        This is footer testing
+        This is footer testing 123
     </footer>
 </body>
 </html>
