--- a/assign1.html
+++ b/assign1.html
@@ -1,1 +1,35 @@
-hello
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<title>Code Campus</title>
+		<link rel="stylesheet" href="css/assign1.css" />
+	</head>
+	
+	<body>
+		<header>
+			<nav>
+				<span id="navbar-header">
+					Code campus
+				</span>
+				<ul id="menu">
+					<li>HOME</li>
+					<li>SERVICE</li>
+					<li>WORKS</li>
+					<li>ABOUT US</li>
+					<li>BLOGS</li>
+					<li>CONTACT</li>
+				</ul>
+			</nav>
+		</header>
+		<article id="article">
+			<img src="img/assign1.jpg" width="100%" height="700"/>
+			<div id="tagline">
+				<p>DESIGN.DEVELOPMENT.BRANDING</p>
+				<p>CREATIVE&nbsp;&&nbsp;EXPERIENCED</p>
+				<p>WE ARE ONE OF THE WORLD'S TOP CREATIVE DESIGN AGENCIES</p>
+				<input type="button" class="btn" value="LIKE SHARE">
+				<input type="button" class="btn" value="SUBSCRIBE">
+			</div>
+		</article>
+	</body>
+</html>
