li active class added

--- a/assign1.html
+++ b/assign1.html
@@ -12,7 +12,7 @@
 					Code campus
 				</span>
 				<ul id="menu">
-					<li>HOME</li>
+					<li class="active">HOME</li>
 					<li>SERVICE</li>
 					<li>WORKS</li>
 					<li>ABOUT US</li>
