--- a/assign1.html
+++ b/assign1.html
@@ -27,8 +27,8 @@
 				<p>DESIGN.DEVELOPMENT.BRANDING</p>
 				<p>CREATIVE&nbsp;&&nbsp;EXPERIENCED</p>
 				<p>WE ARE ONE OF THE WORLD'S TOP CREATIVE DESIGN AGENCIES</p>
-				<input type="button" class="btn" value="LIKE SHARE">
-				<input type="button" class="btn" value="SUBSCRIBE">
+				<input type="button" class="btn" value="LIKE SHARE" />
+				<input type="button" class="btn" value="SUBSCRIBE" />
 			</div>
 		</article>
 	</body>
