--- a/assign1.html
+++ b/assign1.html
@@ -22,7 +22,8 @@
 			</nav>
 		</header>
 		<article id="article">
-			<img src="img/assign1.jpg" width="100%" height="700"/>
+			<h6 style="display:none;">DESIGN.DEVELOPMENT.BRANDING</h6>
+			<img src="img/assign1.jpg" width="100%" height="700" alt="article banner"/>
 			<div id="tagline">
 				<p>DESIGN.DEVELOPMENT.BRANDING</p>
 				<p>CREATIVE&nbsp;&&nbsp;EXPERIENCED</p>
