--- a/assign1.html
+++ b/assign1.html
@@ -25,7 +25,11 @@
 			<h6 style="display:none;">DESIGN.DEVELOPMENT.BRANDING</h6>
 			<img src="img/assign1.jpg" width="100%" height="700" alt="article banner"/>
 			<div id="tagline">
-				<p>DESIGN.DEVELOPMENT.BRANDING</p>
+				<ul>
+					<li><span>DESIGN<span></li>
+					<li><span class="bullets">DEVELOPMENT<span></li>
+					<li><span class="bullets">BRANDING</span></li>
+				</ul>
 				<p>CREATIVE&nbsp;&&nbsp;EXPERIENCED</p>
 				<p>WE ARE ONE OF THE WORLD'S TOP CREATIVE DESIGN AGENCIES</p>
 				<input type="button" class="btn" value="LIKE SHARE" />
