--- a/weatherstack.html
+++ b/weatherstack.html
@@ -2,28 +2,31 @@ const request = require('request');
 
 function weatherstack(city,callback){
 	url = 'http://api.weatherstack.com/current?access_key=0af06b12299f398b353b5a22b7a7b4d8&query='+city;
-	var data = [];
+	
 	request({url,json:true}, function (error, response, body) {
 	console.log('===weatherstack===');
 	   console.log(`Location:${body.location.name},(${body.location.region})\nTemperature: ${body.current.temperature} at ${body.current.observation_time}`);
-	   
-	   data.push({['Location']: body.location.name});
-	   data.push({['Longitude']: body.location.lon});
-	   data.push({['Latitude']: body.location.lat});
-	   callback(data);
+	   <!-- var data = [];    -->
+	   <!-- data.push({['Location']: body.location.name}); -->
+	   <!-- data.push({['Longitude']: body.location.lon}); -->
+	   <!-- data.push({['Latitude']: body.location.lat}); -->
+	   <!-- callback(data); -->
+	   callback(body);
 	});
 }
 
 function mapbox(response){
-	console.log(response[0].Longitude);
-	return false;
-	url = 'https://api.mapbox.com/geocoding/v5/mapbox.places/'+ response[0].Location +'.json?proximity='+ response[0].Longitude+','+ response[0].Latitude +'&access_token=pk.eyJ1IjoicmFtMDgwNDAiLCJhIjoiY2tqODFyYm1kMWtodjJybnF2Y2lnYjc0dCJ9.1zjWuCRAjhUJjFjVnbCQgA';
-	console.log(url); 
-	return false;
+	<!-- console.log('Location:' + response[0].Location);  -->
+	<!-- console.log('Longitude:' + response[0].Longitude); -->
+	<!-- console.log('Latitude' + response[0].Latitude);	 -->
+	<!-- retrun false; -->
+	url = 'https://api.mapbox.com/geocoding/v5/mapbox.places/'+ response.location.name +'.json?proximity='+ response.location.lon +','+ response.location.lat +'&access_token=pk.eyJ1IjoicmFtMDgwNDAiLCJhIjoiY2tqODFyYm1kMWtodjJybnF2Y2lnYjc0dCJ9.1zjWuCRAjhUJjFjVnbCQgA';
 	request({url,json:true}, function (error, response, body) {
 		console.log('===mapbox===');
 	   console.log(`Longitude:${body.features[0].center[0]}\nLatitude:${body.features[0].center[1]}`)
 	});	
 }
 
+
+<!-- Using callback function -->
 weatherstack('raipur',mapbox);
