--- a/weatherstack.html
+++ b/weatherstack.html
@@ -27,6 +27,26 @@ function mapbox(response){
 	});	
 }
 
-
 <!-- Using callback function -->
-weatherstack('raipur',mapbox);
+<!-- weatherstack('raipur',mapbox); -->
+
+
+<!-- Callback Assignment 1
+	### Mess around with the callback pattern
+ -->
+function add(x,y) {
+  setTimeout(sum,2000,x,y);
+}
+function sum(x,y) {
+  console.log(x + y);
+}
+add(1,3);
+
+
+
+
+
+
+
+
+
