OMDB page created

--- a/web-server/public/index.html
+++ b/web-server/public/index.html
@@ -1,8 +1,25 @@
 <html>
     <head>
-
+		<title>OMDB</title>
+		<link rel="stylesheet" href="assets/style.css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        hello world
+        <header>
+			<nav>
+				<span id="navbar-header">
+					Rahul
+				</span>
+				<ul id="menu">
+					<li >
+						<input type="text" placeholder="search movie name here...">
+						<button type="submit"><i class="fa fa-2x fa-search"></i></button>
+					</li>
+				</ul>
+			</nav>
+		</header>
+		<section>
+		</section>
     </body>
 </html>
