--- a/web-server/public/index.html
+++ b/web-server/public/index.html
@@ -13,7 +13,7 @@
 				</span>
 				<ul id="menu">
 					<li >
-						<input type="text" placeholder="search movie name here...">
+						<input type="text" placeholder="placeHolder...">
 						<button type="submit"><i class="fa fa-2x fa-search"></i></button>
 					</li>
 				</ul>
